epserde/tests/fail/drop_memcase_and_get.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_memcase_and_get.rs:19:10
   |
16 |     let mem_case = unsafe { <Vec<String>>::read_mem(cursor, buffer.len()).unwrap() };
   |         -------- binding `mem_case` declared here
17 |
18 |     let s = mem_case.uncase().get(0);
   |             -------- borrow of `mem_case` occurs here
19 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
20 |     assert_eq!(s, Some(&"foo"));
   |     --------------------------- borrow later used here
